--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "version": "3.2.39",
   "packageManager": "pnpm@7.1.0",
+  "node-version":"" ,
   "scripts": {
     "dev": "node scripts/dev.js",
     "build": "node scripts/build.js",
